@@ -1,6 +1,8 @@
 Revision history for Bible::OBML
 
 {{$NEXT}}
+        - Replace deprecated throw() calls with croak()
+        - Remove redundant utf8 file encoding setting
 
 1.12      2020-07-09 08:25:15-07:00 America/Los_Angeles
         - Remove subroutine signatures to allow operation back to Perl 5.14
